update button link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 </p>
                 <p class="mt-9 text-[15px] font-tiro text-white tracking-[0.345em]">Monday 12.02.2002</p>
 
-                <div class="btn-scroll mt-40">
+                <div class="btn-scroll  fixed
+                inset-x-0
+                bottom-5">
                         <a href=""><img src="./assets/btn-scroll.png" class="inline-block w-7 animate-bounce" alt=""></a>
                         <p class="font-serif mt-3 text-[10px] tracking-[0.175em] text-white">Klik untuk membuka undangan
                         </p>
