--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="bg-white">
+                <div class="container mx-auto">
+                    <div class="flex flex-row justify-center">
+                        <div class="w-full md:w-1/2">
+                            <img src="./assets/bg/halaman-utama.png" class="w-full" alt="">
+                        </div>
+                        <div class="w-full md:w-1/2">
+                            <img src="./assets/bg/halaman-utama.png" class="w-full" alt="">
+                        </div>
+                        <div class="w-full md:w-1/2">
+                            <img src="./assets/bg/halaman-utama.png" class="w-full" alt="">
+                        </div>
+                        <div class="w-full md:w-1/2">
+                            <img src="./assets/bg/halaman-utama.png" class="w-full" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
